# fastapi_hw5

./: README.md  pyproject.toml
app/: main.py  repository.py
templates/: index.html
templates/books/: book.html  edit.html  index.html  new.html
tests/: test_task1.py
